# magic0zmq

goclient/: .gitignore  go.mod  go.sum
goclient/.devcontainer/: Dockerfile  devcontainer.json
goclient/cmd/: main.go
rustclient/: Cargo.toml
rustclient/.devcontainer/: Dockerfile  devcontainer.json
rustclient/src/: main.rs
server/: .ar-format-ignore  .bumpversion.cfg  .clang-tidy  .cruft.json  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  Makefile  README.md  conanfile.py
server/.devcontainer/: .dockerignore  Dockerfile  devcontainer.json
server/cmake/: server-config.cmake.in
server/conan/: clang_13
server/src/: CMakeLists.txt  main.cpp
