[package]
name = "magic0zmq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tokio-runtime"]
tokio-runtime = ["tokio", "tokio-util"]

[dependencies]
zeromq = { version = "0.3.5", features = ["tcp-transport"] }

tokio = { version = "1", features = ["full"], optional = true }
tokio-util = { version = "0.7", features = ["compat"], optional = true }
rmp-serde = "1.1.2"
serde = { version = "1.0", features = ["derive"] }

